@@ -7,27 +7,20 @@
 
 @implementation UIxCalMonthViewOld
 
-- (NSCalendarDate *)startOfMonth {
+- (NSCalendarDate *) startOfMonth
+{
   return [[[super startDate] firstDayOfMonth] beginOfDay];
 }
 
-- (NSCalendarDate *)startDate {
+- (NSCalendarDate *) startDate
+{
   return [[self startOfMonth] mondayOfWeek];
-}
-
-- (NSCalendarDate *)endDate {
-  NSCalendarDate *date;
-  
-  date = [self startOfMonth];
-  date = [date dateByAddingYears:0 months:0 days:[date numberOfDaysInMonth]
-               hours:0 minutes:0 seconds:0];
-  date = [[date sundayOfWeek] endOfDay];
-  return date;
 }
 
 /* URLs */
 
-- (NSDictionary *)prevMonthQueryParameters {
+- (NSDictionary *) prevMonthQueryParameters
+{
   NSCalendarDate *date;
 
   date = [[self startOfMonth] dateByAddingYears:0 months:-1 days:0
@@ -35,7 +28,8 @@
   return [self queryParametersBySettingSelectedDate:date];
 }
 
-- (NSDictionary *)nextMonthQueryParameters {
+- (NSDictionary *)nextMonthQueryParameters
+{
   NSCalendarDate *date;
     
   date = [[self startOfMonth] dateByAddingYears:0 months:1 days:0
